--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,7 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.3"
+    compileSdkVersion 28
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -24,9 +23,9 @@ android {
     defaultConfig {
         applicationId "com.nlx.ggstreams"
         minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 2
-        versionName "1.0.1"
+        targetSdkVersion 28
+        versionCode 3
+        versionName "1.0.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
 
@@ -55,8 +54,7 @@ kapt {
 }
 
 ext {
-    dagger_version = "2.14.1"
-    butterknife_version = "8.8.1"
+    dagger_version = "2.16"
     rxjava_version = "2.1.0"
     rxandroid_version = "2.0.1"
     rxlifecycle_version = "2.2.1"
@@ -69,60 +67,77 @@ ext {
     espresso_rules_version = "0.5"
     glide_version = "4.4.0"
     exoplayer_version = "2.6.1"
+    constraint_layout_version = "1.1.3"
+    coroutines_version = "1.0.0"
+    lifecycle_version = "1.1.1"
+    paging_version = "1.0.0"
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    compile project(':core')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:0.3'
+    implementation project(':core')
 
+    implementation "com.android.support:design:$support_lib_version"
+//    implementation "com.android.support:support-core-ui:$support_lib_version"
 
-    compile "com.android.support:recyclerview-v7:$support_lib_version"
-    compile "com.android.support:cardview-v7:$support_lib_version"
-    compile "com.android.support:appcompat-v7:$support_lib_version"
-    compile "com.android.support:design:$support_lib_version"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:recyclerview-v7:$support_lib_version"
+    implementation "com.android.support:cardview-v7:$support_lib_version"
+    implementation "com.android.support:appcompat-v7:$support_lib_version"
+    //implementation "com.android.support:design:$support_lib_version"
+    implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    // paging
+    implementation "android.arch.paging:runtime:$paging_version"
+    implementation "android.arch.paging:rxjava2:1.0.0-rc1"
 
     // DI
-    compile  "com.google.dagger:dagger:$dagger_version"
+    implementation  "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    compile "com.google.dagger:dagger-android-support:$dagger_version"
+    implementation "com.google.dagger:dagger-android-support:$dagger_version"
     annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
-    compile "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     // api
-    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
-    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
-    compile "com.google.code.gson:gson:$gson_version"
-    compile "com.android.support:support-annotations:$support_lib_version"
+    implementation "com.google.code.gson:gson:$gson_version"
+    implementation "com.android.support:support-annotations:$support_lib_version"
 
     // rx
-    compile "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
-    compile "io.reactivex.rxjava2:rxjava:$rxjava_version"
-    compile "com.jakewharton.rxrelay2:rxrelay:$rxrelay_version"
-    compile "com.trello.rxlifecycle2:rxlifecycle:$rxlifecycle_version"
-    compile "com.trello.rxlifecycle2:rxlifecycle-android:$rxlifecycle_version"
-    compile "com.trello.rxlifecycle2:rxlifecycle-components:$rxlifecycle_version"
-    compile "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxbinding_version"
-    compile "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxbinding_version"
-    compile "com.jakewharton.rxrelay2:rxrelay:$rxrelay_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava_version"
+    implementation "com.jakewharton.rxrelay2:rxrelay:$rxrelay_version"
+    implementation "com.trello.rxlifecycle2:rxlifecycle:$rxlifecycle_version"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-android:$rxlifecycle_version"
+    implementation "com.trello.rxlifecycle2:rxlifecycle-components:$rxlifecycle_version"
+    implementation "com.jakewharton.rxbinding2:rxbinding-support-v4:$rxbinding_version"
+    implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxbinding_version"
+    implementation "com.jakewharton.rxrelay2:rxrelay:$rxrelay_version"
+
+    // coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:$coroutines_version"
 
     // images
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
 
-    compile "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
-    compile "com.google.android.exoplayer:exoplayer-hls:$exoplayer_version"
-    compile "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-hls:$exoplayer_version"
+    implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
+
 
 
 }
