--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,13 @@
 buildscript {
-    ext.kotlin_version = '1.2.21'
+    ext.kotlin_version = '1.3.40'
     ext.build_gradle_version = '3.0.0'
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -14,8 +15,8 @@ buildscript {
 allprojects {
 
     ext {
-        support_lib_version = "26.1.0"
-        retrofit_version = "2.3.0"
+        support_lib_version = "28.0.0-alpha1"// 27.1.1
+        retrofit_version = "2.4.0"
         okhttp_version = "3.8.1"
         gson_version = "2.8.1"
     }
