--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.40'
+    ext.kotlin_version = '1.3.50'
     ext.build_gradle_version = '3.0.0'
     repositories {
         jcenter()
@@ -7,15 +7,14 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
-
     ext {
-        support_lib_version = "28.0.0-alpha1"// 27.1.1
+        support_lib_version = "28.0.0-alpha1"
         retrofit_version = "2.4.0"
         okhttp_version = "3.8.1"
         gson_version = "2.8.1"
