--- a/build.gradle
+++ b/build.gradle
@@ -14,10 +14,10 @@ buildscript {
 
 allprojects {
     ext {
-        support_lib_version = "28.0.0-alpha1"
-        retrofit_version = "2.4.0"
-        okhttp_version = "3.8.1"
-        gson_version = "2.8.1"
+        support_lib_version = "28.0.0"
+        retrofit_version = "2.6.2"
+        okhttp_version = "3.14.0"
+        gson_version = "2.8.6"
     }
 
     repositories {
