--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
         targetSdkVersion 28
         versionCode 3
         versionName "1.0.2"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
 
         javaCompileOptions {
@@ -54,7 +54,7 @@ kapt {
 }
 
 ext {
-    dagger_version = "2.16"
+    dagger_version = "2.25.2"
     rxjava_version = "2.1.0"
     rxandroid_version = "2.0.1"
     rxlifecycle_version = "2.2.1"
@@ -75,27 +75,21 @@ ext {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.core:core-ktx:0.3'
     implementation project(':core')
 
-    implementation "com.android.support:design:$support_lib_version"
-//    implementation "com.android.support:support-core-ui:$support_lib_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.1.0'
 
-    implementation "com.android.support:recyclerview-v7:$support_lib_version"
-    implementation "com.android.support:cardview-v7:$support_lib_version"
-    implementation "com.android.support:appcompat-v7:$support_lib_version"
-    //implementation "com.android.support:design:$support_lib_version"
-    implementation "com.android.support.constraint:constraint-layout:$constraint_layout_version"
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     // paging
-    implementation "android.arch.paging:runtime:$paging_version"
-    implementation "android.arch.paging:rxjava2:1.0.0-rc1"
+    implementation 'androidx.paging:paging-runtime:2.1.0'
+    implementation 'androidx.paging:paging-rxjava2:2.1.0'
 
     // DI
     implementation  "com.google.dagger:dagger:$dagger_version"
@@ -113,7 +107,6 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
     implementation "com.google.code.gson:gson:$gson_version"
-    implementation "com.android.support:support-annotations:$support_lib_version"
 
     // rx
     implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
@@ -138,6 +131,7 @@ dependencies {
     implementation "com.google.android.exoplayer:exoplayer-hls:$exoplayer_version"
     implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
 
-
-
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
 }
