--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,7 @@ ext {
     constraint_layout_version = "1.1.3"
     coroutines_version = "1.0.0"
     lifecycle_version = "1.1.1"
-    paging_version = "1.0.0"
+    paging_version = "2.1.0"
 }
 
 dependencies {
@@ -88,8 +88,8 @@ dependencies {
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     // paging
-    implementation 'androidx.paging:paging-runtime:2.1.0'
-    implementation 'androidx.paging:paging-rxjava2:2.1.0'
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-rxjava2:$paging_version"
 
     // DI
     implementation  "com.google.dagger:dagger:$dagger_version"
