--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ kapt {
 }
 
 ext {
-    dagger_version = "2.25.2"
+    dagger_version = "2.28-alpha"
     rxjava_version = "2.1.0"
     rxandroid_version = "2.0.1"
     rxlifecycle_version = "2.2.1"
@@ -75,7 +75,8 @@ ext {
     constraint_layout_version = "1.1.3"
     coroutines_version = "1.3.9"
     lifecycle_version = "1.1.1"
-    paging_version = "2.1.0"
+    paging_version = "3.0.0-alpha07"
+    hilt_version = "1.0.0-alpha02"
 }
 
 dependencies {
@@ -92,7 +93,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     // paging
@@ -100,10 +101,10 @@ dependencies {
     implementation "androidx.paging:paging-rxjava2:$paging_version"
 
     // di
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
+    implementation "com.google.dagger:hilt-android:$dagger_version"
+    kapt "com.google.dagger:hilt-android-compiler:$dagger_version"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_version"
+    kapt "androidx.hilt:hilt-compiler:$hilt_version"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
