--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext.kotlin_version = '1.4.10'
     ext.build_gradle_version = '3.0.0'
+    ext.nav_version = '2.3.1'
+    
     repositories {
         jcenter()
         maven { url 'https://maven.google.com' }
@@ -10,6 +12,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:4.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
@@ -18,6 +21,7 @@ allprojects {
         retrofit_version = "2.9.0"
         okhttp_version = "4.9.0"
         gson_version = "2.8.6"
+
     }
 
     repositories {
